Correct overflow from slides

--- a/src/components/AudioPage/AudioPage.scss
+++ b/src/components/AudioPage/AudioPage.scss
@@ -69,6 +69,7 @@
 
 	.product-slides {
 		margin: 0 auto;
+		overflow: hidden;
 	}
 
 	.top-break-line {
