--- a/src/components/VideoPage/VideoPage.scss
+++ b/src/components/VideoPage/VideoPage.scss
@@ -65,6 +65,7 @@
 
 	.product-slides {
 		margin: 0 auto;
+		overflow: hidden;
 	}
 
 	.top-break-line {
